--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,10 @@ tonic = "0.11"
 prost = "0.12"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0.203", features = ["derive"] }
+rmp = "0.8.14"
+rmp-serde = "1.3.0"
+rmpv = { version = "1.3.0", features = ["with-serde"] }
+bytes = { version = "1.6.0", features = ["std"] }
 
 [build-dependencies]
 tonic-build = "0.11"
