--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ path = "src/client.rs"
 [dependencies]
 tonic = "0.11"
 prost = "0.12"
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
 serde = { version = "1.0.203", features = ["derive"] }
 rmp = "0.8.14"
 rmp-serde = "1.3.0"
