--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ bytes = { version = "1.6.0", features = ["std"] }
 log = "0.4.21"
 futures = "0.3.30"
 clap = { version = "4.5.6", features = ["derive"] }
+chrono = { version = "0.4.38", features = ["now"] }
 
 [build-dependencies]
 tonic-build = "0.11"
