--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ log = "0.4.21"
 futures = "0.3.30"
 clap = { version = "4.5.6", features = ["derive"] }
 chrono = { version = "0.4.38", features = ["now"] }
+uuid = { version = "1.10.0", features = ["v4"] }
 
 [build-dependencies]
 tonic-build = "0.11"
