--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,6 @@ edition = "2021"
 name = "main"
 path = "src/main.rs"
 
-[[bin]] # Bin to run the HelloWorld gRPC client
-name = "client"
-path = "src/client.rs"
-
 [dependencies]
 tonic = "0.11"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "fs"] }
@@ -22,6 +18,8 @@ bytes = { version = "1.6.0", features = ["std"] }
 log = "0.4.21"
 futures = "0.3.30"
 clap = { version = "4.5.6", features = ["derive"] }
+chrono = { version = "0.4.38", features = ["now"] }
+uuid = { version = "1.10.0", features = ["v4"] }
 
 [build-dependencies]
 tonic-build = "0.11"
