--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ futures = "0.3.30"
 clap = { version = "4.5.6", features = ["derive"] }
 chrono = { version = "0.4.38", features = ["now"] }
 uuid = { version = "1.10.0", features = ["v4"] }
+env_logger = "0.11.5"
 
 [build-dependencies]
 tonic-build = "0.11"
