--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,7 @@
 [package]
-name = "rust-lab-sockets-threads"
+name = "rps"
 version = "0.1.0"
 edition = "2021"
-
-[[bin]] # Bin to run the HelloWorld gRPC client
-name = "main"
-path = "src/main.rs"
 
 [dependencies]
 tonic = "0.11"
