--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,12 @@ chrono = { version = "0.4.38", features = ["now"] }
 uuid = { version = "1.10.0", features = ["v4"] }
 env_logger = "0.11.5"
 
+[dev-dependencies]
+criterion = "0.3"
+
 [build-dependencies]
 tonic-build = "0.11"
+
+[[bench]]
+name = "glob_tree"
+harness = false
