--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,15 @@ uuid = { version = "1.10.0", features = ["v4"] }
 env_logger = "0.11.5"
 
 [dev-dependencies]
-criterion = "0.3"
+criterion = { version = "0.3", features = ["async_tokio", "html_reports"] } 
 
 [build-dependencies]
 tonic-build = "0.11"
 
+# [[bench]]
+# name = "glob_tree"
+# harness = false
+
 [[bench]]
-name = "glob_tree"
+name = "channel"
 harness = false
