--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ clap = { version = "4.5.6", features = ["derive"] }
 chrono = { version = "0.4.38", features = ["now"] }
 uuid = { version = "1.10.0", features = ["v4"] }
 env_logger = "0.11.5"
+tokio-util = { version = "0.7.12", features = ["net", "codec"] }
+tokio-stream = "0.1.16"
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["async_tokio"] }
