--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,35 +1,6 @@
-[package]
-name = "rps"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-[dependencies]
-tonic = "0.11"
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "fs"] }
-serde = { version = "1.0.203", features = ["derive"] }
-rmp = "0.8.14"
-rmp-serde = "1.3.0"
-rmpv = { version = "1.3.0", features = ["with-serde"] }
-bytes = { version = "1.6.0", features = ["std"] }
-log = "0.4.21"
-futures = "0.3.30"
-clap = { version = "4.5.6", features = ["derive"] }
-chrono = { version = "0.4.38", features = ["now"] }
-uuid = { version = "1.10.0", features = ["v4"] }
-env_logger = "0.11.5"
-tokio-util = { version = "0.7.12", features = ["net", "codec"] }
-tokio-stream = "0.1.16"
-
-[dev-dependencies]
-criterion = { version = "0.3", features = ["async_tokio"] }
-
-[build-dependencies]
-tonic-build = "0.11"
-
-[[bench]]
-name = "glob_tree"
-harness = false
-
-[[bench]]
-name = "udp_vs_tcp"
-harness = false
+members = [
+    "glob_tree",
+    "pub_sub",
+]
