Server performance improvements
This commit introduces a change to the server's message routing functionality
to reduce CPU load from redundant serialization.

Instead of broadcasting all messages to a single tokio channel, each topic
now has its own channel, which allows us to send a reference to the message
bytes, rather than sending a copy of the message and serializing for each
receiver.

It also implements a configurable server mode for controlling the buffering
behavior of the system. Use high-throughput mode for more buffering,
low-latency mode for no buffering, and balanced mode for a compromise between
the two.

--- a/lbroker/Cargo.toml
+++ b/lbroker/Cargo.toml
@@ -16,8 +16,9 @@ log = "0.4.21"
 futures = "0.3.30"
 clap = { version = "4.5.6", features = ["derive"] }
 tokio-util = { version = "0.7.12", features = ["net", "codec"] }
-tokio-stream = "0.1.16"
+tokio-stream = { version = "0.1.16", features = ["sync"] }
 glob-tree = { path = "../glob_tree" }
+dashmap = "6.1"
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["async_tokio"] }
