--- a/lbroker/Cargo.toml
+++ b/lbroker/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2021"
 rmp = "0.8.14"
 rmp-serde = "1.3.0"
 rmpv = { version = "1.3.0", features = ["with-serde"] }
-env_logger = "0.11.5"
 tonic = "0.11"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "fs"] }
 serde = { version = "1.0.203", features = ["derive"] }
 bytes = { version = "1.6.0", features = ["std"] }
-log = "0.4.21"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 futures = "0.3.30"
 clap = { version = "4.5.6", features = ["derive"] }
 tokio-util = { version = "0.7.12", features = ["net", "codec"] }
